test/e2e/chainsaw/httproute-pingpong-header/assertions/httproute-after-cleanup.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-pingpong-header
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - backendRefs:
        - name: httproute-pingpong-header-ping-service
          (weight): 0
        - name: httproute-pingpong-header-pong-service
