test/e2e/chainsaw/httproute-pingpong-header/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-pingpong-header-rollout
  namespace: default
status:
  (phase == 'Healthy'): true
