test/e2e/chainsaw/httproute-pingpong-header/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-pingpong-header
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
    - backendRefs:
        - name: httproute-pingpong-header-ping-service
          port: 80
        - name: httproute-pingpong-header-pong-service
          port: 80
